--- a/.gitattributes
+++ b/.gitattributes
@@ -7,6 +7,8 @@
 *.java text
 *.c text
 *.h text
+*.txt text
+*.md text
 
 # Declare files that will always have CRLF line endings on checkout.
 *.sln text eol=crlf
